[BUG] Updated Iain's picture, fixed About page alignment

--- a/_includes/assets/sass/style.sass
+++ b/_includes/assets/sass/style.sass
@@ -183,12 +183,17 @@ body
     top: 30px
     
 .about-us-card
-    max-width: 305px
+    max-width: 358px
     width: auto
     height: auto
     display: inline-flex
     justify-content: center
     margin: auto !important
+
+    img        
+        width: 100%
+        max-height: 305px !important
+        object-fit: cover
 
      
 @import "../../../node_modules/bulma/bulma"
